# RustAxum

./: README.md
final_project/: .env  Cargo.toml  docker-compose.yml
final_project/database/: init.sql
final_project/src/: lib.rs  main.rs
final_project/src/routes/: create_task.rs  custom_json_extractor.rs  delete_task.rs  get_tasks.rs  guard.rs  mod.rs  partial_update_tasks.rs  test.rs  update_tasks.rs  users.rs
final_project/src/utils/: app_error.rs  jwt.rs
lessons/hello_world/: Cargo.toml
lessons/hello_world/src/: lib.rs  main.rs
lessons/hello_world/src/routes/: always_errors.rs  handling_params.rs  hello_world.rs  middleware_custom_header.rs  middleware_message.rs  mirror_body_json.rs  mirror_body_request.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  returns_201.rs  returns_json.rs  set_middleware_custom_header.rs  validate_data.rs
